--- a/po/fo.po
+++ b/po/fo.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-28 02:27+0800\n"
-"PO-Revision-Date: 2010-05-03 01:09+0200\n"
+"PO-Revision-Date: 2010-06-07 16:07+0200\n"
 "Last-Translator: Gunleif <gunleif@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fo\n"
@@ -355,7 +355,8 @@ msgid ""
 "Modified: %s"
 msgstr ""
 "Slag: %s\n"
-"Stødd: %sBroytt: %s"
+"Stødd: %s\n"
+"Broytt: %s"
 
 #: ../src/gtk/fm-progress-dlg.c:215 ../src/gtk/fm-progress-dlg.c:234
 #, c-format
